--- a/index.html
+++ b/index.html
@@ -3,9 +3,32 @@
 <head>
 	<meta charset="UTF-8">
 	<title>BASIC TICTACTOE</title>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
+  <script type="text/javascript" src="script.js"></script>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/themes/smoothness/jquery-ui.css" />
 </head>
 <body>
-<h1>TICTACTOE</h1>
-	
+<div id='container'>
+  <h1>TICTACTOE</h1>
+  	 <table> 
+    <tr>
+     <td id="1"></td>
+     <td id="2"></td>
+     <td id="3"></td>
+    </tr>
+    <tr>
+     <td id="4"></td>
+     <td id="5"></td>
+     <td id="6"></td>
+    </tr>
+    <tr>
+     <td id="7"></td>
+     <td id="8"></td>
+     <td id="9"></td>
+    </tr>
+   </table>
+ </div>
 </body>
 </html>
