adding ability to select out each tile with jQuery

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 <div id='container'>
   <h1>TICTACTOE</h1>
+  <div id="message">messageswillgohere</div>
   	 <table> 
     <tr>
      <td id="1"></td>
