Adding winning functionality, also switched X and O images to classes, and switched them in on click. Help from Chris on this part

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <div id='container'>
   <h1>TICTACTOE</h1>
-  <div id="message">messageswillgohere</div>
+  <div class="message">X Starts The Game!</div>
   	 <table> 
     <tr>
      <td id="1"></td>
@@ -30,6 +30,7 @@
      <td id="9"></td>
     </tr>
    </table>
+   <div class="message" id="win">Winner should pop up here!</div>
  </div>
 </body>
 </html>
