Removing win alert and replacing with an html text substituion

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
      <td id="9"></td>
     </tr>
    </table>
-   <div class="message" id="win">Winner should pop up here!</div>
+   <div class="message" id="win">
+    <span> </span>
+   </div>
  </div>
 </body>
 </html>
